--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Projeto Redes Sociais</title>
+    <title>Projeto Social</title>
 </head>
 <body>
-    
+    <h1>aa</h1>
 </body>
 </html>
