--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilo/style.css">
     <title>Projeto Social</title>
 </head>
 <body>
-    <h1>aa</h1>
+    <main>
+        <nav class="botoes">
+            <a href="home.html" target="frame"><img src="imagens/logo-home.jpg" alt=""></a> <br>
+            <a href="facebook.html" target="frame"><img src="imagens/logo-facebook.jpg" alt=""></a>
+        </nav>
+        <section id="telefone">
+            <iframe src="home.html" id="tela" name="frame"></iframe>
+        </section>
+        <section id="redes-sociais">
+         
+        </section>
+
+    </main>
 </body>
 </html>
