--- a/facebook.html
+++ b/facebook.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-        }
-
-        body {
-            width: 100vw;
-            height: 100vh;
-            background: url(imagens/tela-facebook.jpg) no-repeat top center;
-            background-size: cover;
-        }
-    </style>
+    <link rel="stylesheet" href="estilo/social.css">
 </head>
 <body>
-    
+    <img src="imagens/tela-facebook.jpg" alt="Facebook">
+    <a href="https://www.google.com" target="_blank">ACESSE</a>
 </body>
 </html>
