--- a/twitter.html
+++ b/twitter.html
@@ -4,22 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-        }
-
-        body {
-            width: 100vw;
-            height: 100vh;
-            background: url(imagens/tela-twitter.jpg) no-repeat top center;
-            background-size: cover;
-        }
-
-    </style>
+    <link rel="stylesheet" href="estilo/social.css">
 </head>
 <body>
+    <img src="imagens/tela-twitter.jpg" alt="Twitter">
+    <a href="htpps://www.google.com/" target="_blank">ACESSE</a>
     
 </body>
 </html>
